fix alignment issue on service provider profile form

--- a/www/styles/register.css
+++ b/www/styles/register.css
@@ -29,7 +29,7 @@
     /* white-space: nowrap; */
     display: inline-block;
     color: #fff;
-    /* width: 140px; */
+    width: 140px;
     /* height: 136px; */
     /* border: 1px solid tomato; */
     vertical-align: middle;
